feat(agent): upgrade travel backend to agentic planning system
Add Skills-based travel planning, structured TravelPlan output, eval harness, guardrails, agent trace, and lightweight multi-agent orchestration.

Add documentation, README refresh, and unit tests for skill loading, eval rules, guardrails, trace, and orchestration.